# Cortado

./: .clang-format  .gitignore  CMakeLists.txt  README.md  macOS-tsan.supp
.github/workflows/: cmake-multi-platform.yml  release.yml
cmake/: CortadoConfig.cmake.in
doc/: CMakeLists.txt  Doxyfile.in
example/: CMakeLists.txt  example.cpp  example.h  exampleLinux.cpp  exampleMac.cpp  exampleMacOS.cpp  exampleWin32.cpp  main_example.cpp
examples/: CMakeLists.txt  DefaultThreadId.h  ExampleAsyncStackTrace.cpp  ExampleCustomAllocator.cpp  ExampleCustomExceptionHandler.cpp  ExampleCustomScheduler.cpp  ExampleDefaultTaskImpl.cpp  ExampleDefaultTaskImpl.h  ExampleWin32DbgHelpAsyncStackTrace.cpp  example.cpp  example.h
include/Cortado/: AsyncEvent.h  AsyncMutex.h  Await.h  AwaiterBase.h  DefaultAsyncStackTLS.h  DefaultEvent.h  DefaultMutex.h  DefaultScheduler.h  DefaultTaskImpl.h  Task.h
include/Cortado/Common/: ClangOrGccAsyncStackTLS.h  EventBase.h  LinuxEvent.h  LinuxFutexLikeAtomic.h  LinuxMutex.h  MacOSAtomicCompareExchange.h  MacOSCoroutineScheduler.h  MacOSEvent.h  MacOSFutexLikeAtomic.h  MacOSMutex.h  MutexBase.h  PosixCoroutineScheduler.h  PosixEvent.h  STLAtomic.h  STLAtomicIncDec.h  STLCoroutineAllocator.h  STLCoroutineScheduler.h  STLExceptionHandler.h  StandardAsyncStackTLS.h  Win32AsyncStackTLS.h  Win32AtomicCompareExchange.h  Win32CoroutineScheduler.h  Win32Event.h  Win32FutexLikeAtomic.h  Win32Mutex.h
include/Cortado/Concepts/: AsyncStackTracing.h  Atomic.h  AtomicCompareExchange.h  AtomicIncDec.h  BackgroundResumable.h  CoroutineAllocator.h  CoroutineScheduler.h  ErrorHandler.h  Event.h  Mutex.h  PreAndPostAction.h  TaskImpl.h
include/Cortado/Detail/: AsyncStackFrame.h  AtomicRefCount.h  CoroutineAwaiterQueueNode.h  CoroutinePromiseBase.h  CoroutineStorage.h  PromiseType.h  UniquePtrOverArc.h
nuget/: Cortado.targets
tests/: AsyncEventTests.cpp  AsyncMutexTests.cpp  AsyncStackTraceTests.cpp  CMakeLists.txt  CoroutineAllocatorTests.cpp  DefaultEventTests.cpp  DefaultMutexTests.cpp  DefaultTaskTests.cpp  DefaultTaskWithAdditionalStorageTests.cpp
tools/lldb/: commands.py
